horizontal scroll fix

--- a/src/app/components/schedule-table/schedule-table.component.scss
+++ b/src/app/components/schedule-table/schedule-table.component.scss
@@ -7,5 +7,6 @@
         max-width: 490px;
         box-sizing: border-box;
         padding: 10px;
+        overflow: hidden;
     }
 }
